fixed collapsing nav bar

--- a/css/styling.css
+++ b/css/styling.css
@@ -9,7 +9,42 @@ body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-
+@media (max-width: 991px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+      display:block !important;
+  }
+}
 
 .nav>li>a, .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover, .dropdown-menu>li>a, .dropdown-menu>li{
   border-bottom: 3px solid transparent;
@@ -108,11 +143,7 @@ body {
     .navbar-fixed-top .navbar-brand {
         padding: 15px 0;
     }
-    
-
 }
-
-
 
 .logo-img {
 	height: 60px;
@@ -124,7 +155,6 @@ a.nav-selected{
     padding-bottom: 1px;
     border-bottom-width: 1px;
     border-bottom-style: solid
-
 }
 
 .dropbtn {
@@ -303,5 +333,8 @@ a.nav-selected{
 	padding: 10px;
     text-align:center;
 	color: black;
+}
 
+.logoTitle{
+    margin: 18px;
 }
